Addressed bleed issues with menuList by squaring off the radius', reverted the border-radius on the faux-tag in the navbar

--- a/packages/component-library/components/MenuList/Menu.module.scss
+++ b/packages/component-library/components/MenuList/Menu.module.scss
@@ -14,7 +14,6 @@ $side-padding: 3/4 * $ca-grid;
   border: 1px solid $kz-color-wisteria-200;
   box-shadow: $ca-box-shadow;
   line-height: 40px;
-  border-radius: $kz-border-solid-border-radius;
 }
 
 .header {
