--- a/packages/component-library/draft/Kaizen/Collapsible/styles.scss
+++ b/packages/component-library/draft/Kaizen/Collapsible/styles.scss
@@ -10,7 +10,6 @@ $heading-active-color: $kz-color-wisteria-100;
 .container {
   border: 1px solid $ca-border-color;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
-  border-radius: $kz-border-solid-border-radius;
 }
 
 .separated {
@@ -32,9 +31,7 @@ $heading-active-color: $kz-color-wisteria-100;
   text-align: left;
   background-color: white;
   border: none;
-  transition: background-color $ca-duration-rapid,
-    border-radius $ca-duration-rapid;
-  border-radius: $kz-border-solid-border-radius;
+  transition: background-color $ca-duration-rapid;
 
   @include ca-padding(
     $top: $ca-grid,
@@ -54,8 +51,6 @@ $heading-active-color: $kz-color-wisteria-100;
 
 .open {
   background-color: $heading-active-color;
-  border-radius: $kz-border-solid-border-radius $kz-border-solid-border-radius 0
-    0;
 }
 
 .sticky {
@@ -66,8 +61,6 @@ $heading-active-color: $kz-color-wisteria-100;
 
 .section {
   background-color: white;
-  border-radius: 0 0 $kz-border-solid-border-radius
-    $kz-border-solid-border-radius;
   @include ca-padding(
     $top: $ca-grid,
     $end: $ca-grid,
